--- a/internal/config/testdata/all.yml
+++ b/internal/config/testdata/all.yml
@@ -1,5 +1,5 @@
 listenAddress: 127.0.0.10:9205
 timeout: 10s
-infoUrl: http://localhost
+server: http://localhost
 username: testuser
 password: testpass
