--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,31 +1,17 @@
-name: Pull-Request
-
+name: Pull-request
 on:
   pull_request:
-    branches: [ master ]
-
+    branches:
+    - master
 jobs:
-
-  build:
-    name: Build
+  test:
     runs-on: ubuntu-latest
     steps:
-
-    - name: Set up Go 1.x
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Setup Go
       uses: actions/setup-go@v2
       with:
-        go-version: ^1.15
-      id: go
-
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
-
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-
-    - name: Build
-      run: go build -v .
-
-    - name: Test
-      run: go test -cover ./...
+        go-version: 1.16
+    - name: Build and Test
+      run: make
