--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -37,6 +37,11 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Login to Docker hub
+      uses: docker/login-action@v1
+      with:
+        username: xperimental
+        password: ${{ secrets.DOCKER_TOKEN }}
     - name: Build image
       run: make all-images
       env:
