--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -12,17 +12,19 @@ jobs:
       with:
         fetch-depth: 0
     - name: Setup Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v3
       with:
-        go-version: 1.17
+        go-version-file: go.mod
     - name: Build and Test
       run: make
   lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-go@v2
     - uses: actions/checkout@v2
+    - uses: actions/setup-go@v3
+      with:
+        go-version-file: go.mod
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v2
       with:
-        version: v1.45.2
+        version: v1.49.0
