--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -6,6 +6,9 @@ on:
   release:
     types:
     - published
+  pull_request:
+    branches:
+    - master
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -31,7 +34,6 @@ jobs:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
     - name: Set up Docker Buildx
-      id: buildx
       uses: docker/setup-buildx-action@v2
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
@@ -44,7 +46,22 @@ jobs:
       with:
         username: xperimental
         password: ${{ secrets.DOCKER_TOKEN }}
-    - name: Build image
-      run: make all-images
-      env:
-        GITHUB_REF: ${{ github.ref }}
+    - name: Docker Metadata
+      id: meta
+      uses: docker/metadata-action@v4
+      with:
+        images: |
+          ghcr.io/xperimental/nextcloud-exporter
+          xperimental/nextcloud-exporter
+        tags: |
+          type=semver,pattern={{version}}
+          type=ref,event=branch
+          type=ref,event=pr
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        platforms: linux/amd64,linux/arm64
