--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -37,12 +37,14 @@ jobs:
       uses: docker/setup-buildx-action@v2
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
+      if: ${{ github.event_name != 'pull_request' }}
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Login to Docker hub
       uses: docker/login-action@v2
+      if: ${{ github.event_name != 'pull_request' }}
       with:
         username: xperimental
         password: ${{ secrets.DOCKER_TOKEN }}
