Add lint-promtool step to Github workflow

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -15,3 +15,5 @@ jobs:
       uses: golangci/golangci-lint-action@v4
       with:
         version: v1.62.2
+    - name: promtool
+      run: make lint-promtool
